--- a/01-eks-gatekeeper/Jenkinsfile
+++ b/01-eks-gatekeeper/Jenkinsfile
@@ -4,6 +4,7 @@ pipeline {
   options {
     timestamps()
     disableConcurrentBuilds()
+    skipDefaultCheckout(true)   // кошумча checkout болбошу үчүн
   }
 
   triggers {
@@ -50,9 +51,12 @@ pipeline {
 
     stage('Run Policy Tests') {
       steps {
-        sh '''
-          ./conftest test tests --policy policies
-        '''
+        dir('01-eks-gatekeeper') {
+          sh '''
+            set -e
+            ../conftest test tests --policy policies
+          '''
+        }
       }
     }
   }
@@ -69,3 +73,4 @@ pipeline {
     }
   }
 }
+
