Make pipeline robust: skip conftest when no rego policies

--- a/01-eks-gatekeeper/Jenkinsfile
+++ b/01-eks-gatekeeper/Jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
   options {
     timestamps()
     disableConcurrentBuilds()
-    skipDefaultCheckout(true)   // кошумча checkout болбошу үчүн
+    skipDefaultCheckout(true)
   }
 
   triggers {
@@ -40,7 +40,7 @@ pipeline {
           echo "Detected OS=$OS ARCH=$ARCH"
 
           curl -L -o conftest.tar.gz \
-          https://github.com/open-policy-agent/conftest/releases/download/v${CONFTEST_VERSION}/conftest_${CONFTEST_VERSION}_${OS}_${ARCH}.tar.gz
+            https://github.com/open-policy-agent/conftest/releases/download/v${CONFTEST_VERSION}/conftest_${CONFTEST_VERSION}_${OS}_${ARCH}.tar.gz
 
           tar -xzf conftest.tar.gz
           chmod +x conftest
@@ -51,22 +51,42 @@ pipeline {
 
     stage('Run Policy Tests') {
       steps {
-        dir('01-eks-gatekeeper') {
-          sh '''
-            set -e
-            ../conftest test tests --policy policies
-          '''
-        }
+        sh '''
+          set -e
+
+          echo "Running in repo root: $(pwd)"
+          echo "Checking Gatekeeper folders..."
+
+          if [ ! -d "01-eks-gatekeeper/tests" ]; then
+            echo "❌ Missing folder: 01-eks-gatekeeper/tests"
+            exit 1
+          fi
+
+          if [ ! -d "01-eks-gatekeeper/policies" ]; then
+            echo "❌ Missing folder: 01-eks-gatekeeper/policies"
+            exit 1
+          fi
+
+          # Conftest иштеши үчүн Rego (*.rego) керек.
+          # Сенде азыр Gatekeeper YAML гана (Constraint/ConstraintTemplate) бар, ошон үчүн Rego жок болсо skip кылабыз.
+          if find "01-eks-gatekeeper/policies" -type f -name "*.rego" | grep -q .; then
+            echo "✅ Rego policies found. Running conftest..."
+            ./conftest test 01-eks-gatekeeper/tests --policy 01-eks-gatekeeper/policies
+          else
+            echo "⚠️ No Rego policies found under 01-eks-gatekeeper/policies. Skipping conftest."
+            echo "   (Gatekeeper YAML != Conftest Rego — бул нормалдуу.)"
+          fi
+        '''
       }
     }
   }
 
   post {
     success {
-      echo "✅ Policy checks PASSED"
+      echo "✅ Pipeline PASSED"
     }
     failure {
-      echo "❌ Policy checks FAILED"
+      echo "❌ Pipeline FAILED"
     }
     always {
       cleanWs()
